@startuml
package [..] as C_0016431317663134048372 {
package [src] as C_0010634688166860467214 {
package [models] as C_0001626712604113445200 {
abstract "::Item" as C_0005967165952864249862
abstract C_0005967165952864249862 {
+Item() : void
+Item(std::string_view name, std::string_view desc, int default_price, int add_price = 0) : void
+~Item() = default : void
..
+addToPrice(int add) : void
+getDesc() const : const std::string &
{abstract} +getItemType() const = 0 : ItemType
+getName() const : const std::string &
+getPrice() const : int
+getPriceModified() const : int
+getQualityPrice() const : int
+setDefaultDesc() : void
+setDefaultPrice() : void
+setDesc(std::string_view d) : void
+setName(std::string_view n) : void
+setQualityPrice(int q_price) : void
+toJson() const : QJsonObject
__
#_default_price : const int
#_desc : std::string
#_name : std::string
#_price : int
#_quality_price : int
}
class "::Player" as C_0003692324345213718176
class C_0003692324345213718176 {
+Player() : void
+Player(std::string_view character_name, std::string_view author_name, int level, Attribute p_die1, Attribute p_die2, WeaponType pref_weapon, bool canMartialWeapon, bool canMartialArmor, bool canRange, bool canShield) : void
..
+getAuthorName() const : const std::string &
+getCanMartialArmor() const : bool
+getCanMartialWeapon() const : bool
+getCanRange() const : bool
+getCanShield() const : bool
+getCharacterName() const : const std::string &
+getLevel() const : int
+getPreferredWeaponType() const : WeaponType
+getPrimaryDie1() const : Attribute
+getPrimaryDie2() const : Attribute
+setAuthorName(std::string_view author_name) : void
+setCanMartialArmor(bool canMartialArmor) : void
+setCanMartialWeapon(bool canMartialWeapon) : void
+setCanRange(bool canRange) : void
+setCanShield(bool canShield) : void
+setCharacterName(std::string_view ch_name) : void
+setLevel(int level) : void
+setPreferredWeaponType(WeaponType pref_weapon) : void
+setPrimaryDie1(Attribute p_die1) : void
+setPrimaryDie2(Attribute p_die2) : void
+toJson() const : QJsonObject
__
-_author_name : std::string
-_canMartialArmor : bool
-_canMartialWeapon : bool
-_canRange : bool
-_canShield : bool
-_character_name : std::string
-_level : int
-_preferred_weapon_type : WeaponType
-_primary_die1 : Attribute
-_primary_die2 : Attribute
}
class "::Armor" as C_0017091837617986840564
class C_0017091837617986840564 {
+Armor() : void
+Armor(std::string_view name, std::string_view desc, int default_price, int price, int initiative, bool isMartial, Attribute magic_defense, int magic_defense_bonus, Attribute defense, int defense_bonus, bool isShield) : void
..
+getDefAtr() const : Attribute
+getDefBonus() const : int
+getInitiative() const : int
+getIsMartial() const : bool
+getIsShield() const : bool
+getItemType() const : ItemType
+getMagDefAtr() const : Attribute
+getMagDefBonus() const : int
+setDef(int d) : void
+setInitiative(int in) : void
+setIsMartial(bool m) : void
+setIsShield(bool s) : void
+setMagDef(int md) : void
+toJson() const : QJsonObject
__
-_defense : Attribute
-_defense_bonus : int
-_initiative : int
-_isMartial : bool
-_isShield : bool
-_magic_defense : Attribute
-_magic_defense_bonus : int
}
}
package [systems] as C_0016692703261607978348 {
abstract "::GeneratorStrategy" as C_0003391557478520177739
abstract C_0003391557478520177739 {
+~GeneratorStrategy() = default : void
..
{abstract} +generate(const Player & player) = 0 : std::unique_ptr<Item>
__
}
class "::ArmorGenerator" as C_0005567866987455504025
class C_0005567866987455504025 {
+ArmorGenerator(const QString & file_path) : void
..
+generate(const Player & player) : std::unique_ptr<Item>
{static} -isArmorUsable(const Player & player, const Armor & armor) : bool
__
-_cache_armors : std::vector<std::unique_ptr<Armor>>
}
}
}
}
C_0005967165952864249862 <|-- C_0017091837617986840564
C_0003391557478520177739 ..> C_0003692324345213718176
C_0003391557478520177739 ..> C_0005967165952864249862
C_0005567866987455504025 ..> C_0003692324345213718176
C_0005567866987455504025 ..> C_0005967165952864249862
C_0005567866987455504025 o-- C_0017091837617986840564 : -_cache_armors
C_0003391557478520177739 <|-- C_0005567866987455504025

'Generated with clang-uml, version 0.6.2
'LLVM version clang version 20.1.7 (https://github.com/llvm/llvm-project.git 6146a88f60492b520a36f8f8f3231e15f3cc6082)
@enduml
